Fix overly large font on mobile

--- a/www/_sass/_base.scss
+++ b/www/_sass/_base.scss
@@ -23,6 +23,14 @@ body {
     -webkit-text-size-adjust: 100%;
 }
 
+body { font-size: $base-font-size - 6px; }
+@media screen and (min-width: 800px)  { body{ font-size: $base-font-size - 5px; }}
+@media screen and (min-width: 900px)  { body{ font-size: $base-font-size - 4px; }}
+@media screen and (min-width: 1000px) { body{ font-size: $base-font-size - 3px; }}
+@media screen and (min-width: 1100px) { body{ font-size: $base-font-size - 2px; }}
+@media screen and (min-width: 1200px) { body{ font-size: $base-font-size - 1px; }}
+@media screen and (min-width: 1300px) { body{ font-size: $base-font-size; }}
+
 
 
 /**
