--- a/www/_sass/_layout.scss
+++ b/www/_sass/_layout.scss
@@ -8,9 +8,6 @@
   top: 0;
   z-index: 20;
   font-size: 1.3rem;
-  background-color: white;
-//  box-shadow: 3px 0px 10px #888888;
-//  height: 100%
 }
 
 #sidebar .sidebar-profile {
